cabal-version:      2.4
name:               mapEditorToy
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Cajunvoodoo

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable consoleApp
    main-is:          consoleApp.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14.3.0
                    , mtl
                    , unix-compat
                    , extra
                    , optparse-applicative
                    , text
                    , text-show
                    , ansi-terminal
                    , massiv
                    , vty
                    , optics
                    , megaparsec
                    , generic-deriving
                    , containers
                    , random
    ghc-options:
                 -O2
                 -rtsopts
                 -threaded
                 "-with-rtsopts=-N4"
    hs-source-dirs:   app
    default-language: Haskell2010
